Bug 462739 - The icon of Xwayland apps disappeared from task switcher and/or task manager
Summary: The icon of Xwayland apps disappeared from task switcher and/or task manager
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-12-07 11:58 UTC by Patrick Silva
Modified: 2022-12-17 15:59 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screen recording (2.57 MB, video/x-matroska)
2022-12-07 11:58 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-12-07 11:58:27 UTC
Created attachment 154390 [details]
screen recording

SUMMARY
Some affected apps:
chromium-based browsers Vivaldi and Opera
Thunderbird
Discord
Audacity
Deluge torrent client
Strawberry music player
Gparted
OpenShot video editor

STEPS TO REPRODUCE
1. use Wayland
2. open any app mentioned above
3. observe the task manager and the alt+tab menu

OBSERVED RESULT
no icon in the task switcher and/or task manager.. Please watch the attached screen recording showing some affected apps.

EXPECTED RESULT
the app icon is present in both task switcher and task manager

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.26.80
KDE Frameworks Version: 5.101.0
Qt Version: 5.15.7
Graphics Platform: Wayland
Comment 1 Nate Graham 2022-12-07 20:36:28 UTC
Any chance all of those apps are using XWayland?

I can reproduce the issue with Discord (which is using XWayland), but only in the Task Switcher, not the Task Manager.
Comment 2 Patrick Silva 2022-12-08 09:53:20 UTC
All affected apps run on Xwayland.
Comment 3 Patrick Silva 2022-12-08 10:18:00 UTC
And the icon in the window decoration disappeared too.
Comment 5 Bug Janitor Service 2022-12-13 20:34:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kwindowsystem/-/merge_requests/76
Comment 6 Nicolas Fella 2022-12-17 15:59:36 UTC
Git commit c01039b7e7ebc142402351168fab2f79579c728f by Nicolas Fella.
Committed on 17/12/2022 at 15:38.
Pushed by nicolasfella into branch 'master'.

Make KX11Extras::icon behave like KWindowSytem::icon

KwindowSystem::icon had an interesting behavior

When called on a non-X11 platform it would load the X11 backend and use that

KWin makes use of that to load icons for XWayland apps

Make KX11Extras also behave like that

M  +97   -2    src/kx11extras.cpp

https://invent.kde.org/frameworks/kwindowsystem/commit/c01039b7e7ebc142402351168fab2f79579c728f