Make KX11Extras::icon behave like KWindowSytem::icon

KwindowSystem::icon had an interesting behavior

When called on a non-X11 platform it would load the X11 backend and use that

KWin makes use of that to load icons for XWayland apps

Make KX11Extras also behave like that

BUG: 462739